Splurty final (horizontal scroll fixed)

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -111,3 +111,7 @@ h2 span {
 ::selection {
   background-color: #f84342;
 }
+
+body {
+  overflow-x:hidden;
+}
